--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@fancyapps/fancybox": "^3.5.7",
     "@fancyapps/ui": "^5.0.21",
+    "aos": "^2.3.4",
     "browser-sync": "^2.29.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
